# gpr

./: Cargo.toml  build.py  close.html  game.css  game.html  index.html  main.js  p1w.html  p2w.html  template.html
games/: error.html  tic_tac_toe.html
pkg/: gpr.js  gpr_bg.wasm
src/: game.rs  lib.rs  tic_tac_toe.rs
