[package]
name = "gpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
fastrand = "2.0.2"
wasm-bindgen = "0.2.92"
wasm-cookies = {version = "0.2.1"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDocument',
  'Node',
  'Window',
  'Location',
]
